<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textAlignment="center"
        android:padding="20sp"
        android:background="@color/ecocolor"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name_app" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tV_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:textSize="26sp"
            android:textColor="@color/ecocolor"
            android:text="@string/formu" />

        <EditText
            android:id="@+id/eT1"
            style="@style/style_editText"
            android:hint="@string/name"
            android:autofillHints="name"
            android:inputType="text" />

        <EditText
            android:id="@+id/eT2"
            style="@style/style_editText"
            android:autofillHints="address"
            android:hint="@string/address"
            android:inputType="text" />

        <EditText
            android:id="@+id/eT3"
            style="@style/style_editText"
            android:hint="@string/phone"
            android:autofillHints="phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/eT4"
            style="@style/style_editText"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house" />

            <RadioButton
                android:id="@+id/rB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apto" />

            <RadioButton
                android:id="@+id/rB3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rural" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solar" />

            <CheckBox
                android:id="@+id/cB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aero" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />

        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/ecocolor"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:cornerRadius="15sp"
            android:text="@string/summit" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:background="@color/ecocolor"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/todos" />

</androidx.constraintlayout.widget.ConstraintLayout>